Archive2/01/88c547791c9004/output
main.cpp: In function ‘int main()’:
main.cpp:8:40: error: ‘numbers’ was not declared in this scope
     std::cout << "Second element: " << numbers[1] << '\n';
                                        ^
main.cpp:13:19: error: unable to deduce ‘auto&&’ from ‘numbers’
     for (auto i : numbers) {
                   ^
